--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<h1> Witsands International School </h1>
+<script src="main.js"></script>
 </body>
 </html>
