--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1> Witsands International School </h1>
+	<h3>Truth purity and love</h3>
 <script src="main.js"></script>
 </body>
 </html>
