first project code

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<title>Contact</title>
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
 	<div class="container">
@@ -14,16 +14,16 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="pages/about.html">About</a></li>
-				<li><a href="pages/service.html">Service</a></li>
-				<li><a href="pages/contact.html">Contact Us</a></li>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="services.html">Service</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 		<main>
 			<div class="row">
 				<h3>
-					Welcome
+					Conact Us
 				</h3>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum quos obcaecati totam quo eius, fuga maiores! Necessitatibus ipsa sunt repudiandae sit, dolorum iusto repellendus quibusdam, dolores ab ut non eius tempora assumenda voluptatibus in labore quam, quas veniam. Amet veniam illum nulla. Voluptas, inventore obcaecati quod, quia voluptatibus voluptates autem ducimus veritatis. Eaque, debitis ab officiis ea vero quod distinctio ratione excepturi quae cumque ullam maxime, adipisci. Dolorem veniam a maxime aliquid dolore pariatur assumenda adipisci perspiciatis, quia, placeat delectus. Illo sint iusto quam natus eum expedita minima, numquam recusandae facilis magni nihil alias voluptatibus deserunt, repudiandae consectetur deleniti. Ratione!
