fixed the navigation connectivity

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="pages/about.html">About</a></li>
-				<li><a href="pages/service.html">Service</a></li>
+				<li><a href="pages/services.html">Service</a></li>
 				<li><a href="pages/contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
