--- a/pages/services.html
+++ b/pages/services.html
@@ -14,7 +14,7 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="../../index.html">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="services.html">Service</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
