First Major Commit - Basic Building Blocks Laid

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Home</title>
 	<link rel="stylesheet" href="styles/style.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Arimo|Catamaran|Noto+Serif|PT+Serif|Quicksand" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -12,7 +14,8 @@
 				IBN Construction Company
 			</h1>
 		</header>
-		<nav>
+
+		<nav class="clearfix">
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="pages/about.html">About</a></li>
@@ -20,7 +23,8 @@
 				<li><a href="pages/contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
-		<main>
+
+		<main  class="">
 			<div class="row">
 				<h3>
 					Welcome
@@ -37,6 +41,6 @@
 		</footer>
 	</div>
 
-<script src="main.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
