--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Contact</title>
 	<link rel="stylesheet" href="../styles/style.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Arimo|Catamaran|Noto+Serif|PT+Serif|Quicksand" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
