--- a/pages/services.html
+++ b/pages/services.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Services</title>
 	<link rel="stylesheet" href="../styles/style.css">
+
+	<link href="https://fonts.googleapis.com/css?family=Arimo|Catamaran|Noto+Serif|PT+Serif|Quicksand" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -12,7 +14,7 @@
 				IBN Construction Company
 			</h1>
 		</header>
-		<nav>
+		<nav class="">
 			<ul>
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
