--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li><a href="pages/contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
-		
+		<!-- just some comment -->
 		<main  class="">
 			<div class="row">
 				<h3>
