--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<header>
 			<h1>
-				IBN Construction Company
+				IBN Construction Company Inc.
 			</h1>
 		</header>
 
